fix some button classes and spacing

--- a/src/scss/components/_changeusername.scss
+++ b/src/scss/components/_changeusername.scss
@@ -6,4 +6,7 @@ div.react.change-username {
 	.profile-preview.valid, .username-message.valid {
 		color:green;
 	}
+	#username-form {
+		margin-bottom: 2rem;
+	}
 }
